--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-buildscript {
+/*buildscript {
 	repositories {
 		mavenCentral()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE")
 	}
-}
+}*/
 plugins {
 	id 'org.springframework.boot' version '2.4.10'
 	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
